# aScrobble

./: .gitignore  DEV_GUIDE.md  LICENSE  README.md  TODO.md  get-tokens.rs  index.html  package-lock.json  package.json  test-apple-api.ps1  test-apple.ps1  vite.config.ts
.claude/: settings.local.json
.github/workflows/: release.yml
scripts/: build-worker.mjs
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: worker.js
src-tauri/src/: commands.rs  deploy.rs  lib.rs  main.rs  storage.rs
src-tauri/src/auth/: apple.rs  cloudflare.rs  cloudflare_oauth.rs  lastfm.rs  mod.rs
src/components/: AppleStep.tsx  CloudflareStep.tsx  Dashboard.tsx  DeployStep.tsx  DoneStep.tsx  LastfmStep.tsx  Settings.tsx  Stepper.tsx  Welcome.tsx
src/lib/: tauri.ts  worker-api.ts
worker/: package-lock.json  package.json  tsconfig.json  wrangler.toml
worker/src/: apple.ts  detect.ts  env.ts  index.ts  kv_keys.ts  lastfm.ts  ledger.ts  listenbrainz.ts  md5.ts  notify.ts  scrobbler.ts  timestamps.ts
worker/tests/: apple.test.ts  detect.test.ts
